whole lotta changes...i need to change habits here lol
